--- a/sicongliu.html
+++ b/sicongliu.html
@@ -103,15 +103,15 @@
 	<p>Graduate and undergraduate students interested in related research fields are welcome to contact me via E-mail.</p>
 
 <h3>教育学术经历 Education and Academic Experiences</h3>
-	<p>2022年2月 - 至今 &nbsp;&nbsp; 厦门大学信息学院，<b>副教授</b></p>
-	<p>2018年2月 - 2022年1月 &nbsp;&nbsp; 厦门大学信息学院，<b>助理教授</b></p>
+	<p>2021年8月 - 至今 &nbsp;&nbsp; 厦门大学信息学院，<b>副教授</b></p>
+	<p>2018年2月 - 2021年7月 &nbsp;&nbsp; 厦门大学信息学院，<b>助理教授</b></p>
 	<p>2017年7月 - 2018年1月 &nbsp;&nbsp; 华为技术有限公司网络技术研究部，<b>高级工程师</b></p>
 	<p>2012年8月 - 2017年7月 &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程<b>博士学位</b>，导师宋健教授</p>
 	<p>2010年8月 - 2011年1月 香港城市大学电子工程学系，交流访学</p>
 	<p>2008年8月 - 2012年7月 &nbsp;清华大学电子工程系，<b>本科</b></p>
 
-	<p>Feb. 2022 - Present &nbsp;&nbsp; <b>Associate Professor</b>, School of Informatics, Xiamen University</p>
-	<p>Feb. 2018 - Jan. 2022 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
+	<p>Aug. 2021 - Present &nbsp;&nbsp; <b>Associate Professor</b>, School of Informatics, Xiamen University</p>
+	<p>Feb. 2018 - Jul. 2021 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
 	<p>Jul. 2017-Jan. 2018 &nbsp;&nbsp; <b>Senior Engineer</b>, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
 	<p>Aug. 2012-Jul. 2017 &nbsp;&nbsp; <b>Ph.D.</b>, Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
 	<p>Aug. 2010-Jan. 2011  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
@@ -202,14 +202,22 @@
 	<p>&bull; <b>刘思聪</b>，肖亮，“无线通信与安全”，北京：清华大学出版社，2021年4月 （教育部高等学校电子信息类专业教学指导委员会规划教材、高等学校电子信息类专业系列教材）</p>
 	<p> &nbsp; &nbsp; <b>S. Liu</b>, L. Xiao, "Wireless Communications and Security," <i>Beijing: Tsinghua University Press</i>, Apr. 2021, ISBN: 978-7-302-57684-6.</p>
 
+	<p>&bull; L. Xiao, D. Jiang, <b>S. Liu</b>, "Reinforcement Learning Based Communication Security for Unmanned Aerial Vehicles," (Book Chapter) In: Chen, X., Susilo, W., Bertino, E. (eds), "Cyber Security Meets Machine Learning," <i>Springer</i>, Jan. 2021, ISBN: 978-981-33-6726-5.
+		[<a target="blank" href="https://link.springer.com/chapter/10.1007/978-981-33-6726-5_3">Abstract</a>][<a target="blank" href="papers/Springer_chapter21.pdf">PDF</a>][<a target="blank" href="papers/Springer_chapter21.txt">bibtex</a>]</p>
+
 
 	<p>
 		<img src="images/book_springer_research_on_key_tech.bmp" width = 120/> <img src="images/book_phei.jpg" width = 140/> <img src="images/book_5G.jpg" width = 120/>
-		<img src="images/book_wireless_security.jpg" width = 120/>
+		<img src="images/book_wireless_security.jpg" width = 120/> <img src="images/book_chapter_UAV_security.jpg" width = 120/>
 	</p>
 
 <br>
 <p><strong>期刊论文 Journals</strong></p>
+
+	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Learning-Based Efficient Sparse Sensing and Recovery for Privacy-Aware IoMT," <i>IEEE Internet of Things Journal</i>, doi: 10.1109/JIOT.2022.3163593, Mar. 2022.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/9745135">Abstract</a>][<a target="blank"  href="papers/JIOT22wei.pdf">PDF</a>][<a target="blank"  href="papers/JIOT22wei.txt">bibtex</a>]</p>
+
+
 <p>&bull; <b>S. Liu*</b> and X. Huang, "Sparsity-aware channel estimation for mmWave massive MIMO: A deep CNN-based approach," <i>China Communications</i>,  vol. 18, no. 6, pp. 162-171, Jun. 2021.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9459572">Abstract</a>][<a target="blank"  href="papers/CNCOM21liu.pdf">PDF</a>][<a target="blank"  href="papers/CNCOM21liu.txt">bibtex</a>]</p>
 
@@ -304,11 +312,14 @@
 	<p>&bull; T. Wei, D. Su and <b>S. Liu</b>*, "Generative Adversarial Network Enabled Sparse Signal Compression and Recovery for Internet of Medical Things," <i>ACM UbiComp'21</i>, pp. 678–683, Sept 2021.
 		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480404">Abstract</a>][<a target="blank"  href="papers/UbiComp21wei.pdf">PDF</a>][<a target="blank"  href="papers/UbiComp21wei.txt">bibtex</a>]</p>
 
-	<p>&bull; D. Su, X. Liu and <b>S. Liu</b>*, "Three-Dimensional Indoor Visible Light Localization: A Learning-Based Approach," <i>ACM UbiComp'21</i>, pp. 672–677, Sept 2021.
-		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480406">Abstract</a>][<a target="blank"  href="papers/UbiComp21su.pdf">PDF</a>][<a target="blank"  href="papers/UbiComp21su.txt">bibtex</a>]</p>
+	<p>&bull; D. Su, L. Gao and <b>S. Liu</b>*, "Denoising Deep Sparse Learning Based Channel Estimation for MU-MIMO Systems," <i>2021 13th International Conference on Wireless Communications and Signal Processing (WCSP)</i>, pp. 1-5, Oct. 2021.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/9613230">Abstract</a>][<a target="blank"  href="papers/WCSP21.pdf">PDF</a>][<a target="blank"  href="papers/WCSP21.txt">bibtex</a>]</p>
 
 	<p>&bull; <b>S. Liu</b>*, L. Gao, and D. Su, "Deep Learning Based Underwater Acoustic Channel Estimation Exploiting Physical Knowledge on Channel Sparsity," <i>ACM UbiComp'21</i>, pp. 655–659, Sept 2021.
 		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480401">Abstract</a>][<a target="blank"  href="papers/Ubicomp21gao.pdf">PDF</a>][<a target="blank"  href="papers/Ubicomp21gao.txt">bibtex</a>]</p>
+
+	<p>&bull; D. Su, X. Liu and <b>S. Liu</b>*, "Three-Dimensional Indoor Visible Light Localization: A Learning-Based Approach," <i>ACM UbiComp'21</i>, pp. 672–677, Sept 2021.
+		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480406">Abstract</a>][<a target="blank"  href="papers/UbiComp21su.pdf">PDF</a>][<a target="blank"  href="papers/UbiComp21su.txt">bibtex</a>]</p>
 
 	<p>&bull; L. Gao and <b>S. Liu</b>*, "Underwater Acoustic Channel Estimation Based on Sparsity-Aware Deep Neural Networks," <i>2021 OES China Ocean Acoustics (COA)</i>, pp. 544-549, June 2021.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9519876">Abstract</a>][<a target="blank"  href="papers/COA21gao.pdf">PDF</a>][<a target="blank"  href="papers/COA21gao.txt">bibtex</a>]</p>
