--- a/sicongliu.html
+++ b/sicongliu.html
@@ -189,7 +189,7 @@
 
 <h3>发表论著 Selected Publications</h3>
 
-<p><strong>出版专著 Book Chapters</strong></p>
+<p><strong>出版专著 Monographs & Book Chapters</strong></p>
 	<p>&bull; <b>Sicong Liu</b>, "Research on the Key Technologies in Narrowband Interference and Impulsive Noise Mitigation and Cancellation," <i>Springer</i>, Sep. 2020, ISBN: 978-981-15-4723-2.
 		[<a target="blank" href="https://www.springer.com/gp/book/9789811547232">Abstract</a>][<a target="blank" href="papers/Springer2020.pdf">PDF</a>][<a target="blank" href="papers/Springer2020.txt">bibtex</a>]</p>
 
@@ -409,7 +409,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd Jan. 2022 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Apr. 2022 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
