--- a/sicongliu.html
+++ b/sicongliu.html
@@ -70,7 +70,7 @@
 	<p>已发表60余篇期刊与会议学术论文，出版学术专著5部，其中4部为第一作者，获得8项发明专利授权，其中2项为国家标准必要专利。
 		担任宽带电力载波通信国家标准起草人。获“福建省高层次人才”认定。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
 		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”称号。获ACM UbiComp 2021 CPD WS 优秀论文奖（通讯作者）。主持国家自然科学基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
-		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。以第一作者主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材、高等学校电子信息类专业系列教材。主讲一门本科生课程入选“福建省一流本科课程”。</p>
+		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。以第一作者主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材、高等学校电子信息类专业系列教材。参与讲授一门本科生课程入选“福建省一流本科课程”。</p>
 
 	<p> 担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会Publication Chair、IEEE ISPLC 2021国际学术会议的TPC Chair, IEEE ICCC 2021大会Workshop Chair、IEEE ICC 2019大会Session Chair、IEEE ICCE 2019大会Track Chair，
 		以及包括IEEE ICC/Globecom在内的多个国际知名学术会议技术程序委员会委员。担任Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编辑或客座编辑。
@@ -120,7 +120,7 @@
 <h3>荣誉奖励 Honors and Awards</h3>
 	<p>&bull; ACM UbiComp CPD WS 优秀论文奖（通讯作者)，2021 </p>
 	<p>&bull; 福建省高层次人才，2021 </p>
-	<p>&bull; 福建省一流本科课程（课程主讲），2021 </p>
+	<p>&bull; 福建省一流本科课程，2021 </p>
 	<p>&bull; 中国电子学会自然科学二等奖（排名第3），2019 </p>
 	<p>&bull; 福建省科技进步三等奖（排名第3），2019 </p>
 	<p>&bull; 福建省引进高层次人才，2019 </p>
@@ -136,6 +136,7 @@
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
 	<p>&bull; Best Paper Award of ACM UbiComp CPD WS (As Corresponding Author), 2021 </p>
 	<p>&bull; High-Level Talents of Fujian Province, 2021 </p>
+	<p>&bull; Outstanding Undergraduate Courses of Fujian Province, 2021</p>
 	<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3rd), 2019 </p>
 	<p>&bull; Third Prize of Fujian Science and Technology Progress Award (ranking 3rd), 2019 </p>
 	<p>&bull; High-Level Introduced Talents of Fujian Province, 2019 </p>
