--- a/sicongliu.html
+++ b/sicongliu.html
@@ -45,7 +45,7 @@
 					<p>PhD, Electronic Engineering, Tsinghua University</p>
 					<p>地址：福建省厦门市思明区厦门大学海韵园，邮编：361005</p>
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
-					<p>E-mail: 1) liusc (at) xmu.edu.cn  2) liusc1028 (at) gmail.com</p>
+					<p>E-mail: liusc (at) xmu.edu.cn  </p>
 					<p><a target="blank" href="https://scholar.google.com/citations?user=FjTr1C8AAAAJ&hl=zh-TW">谷歌学术个人主页 Google Scholar</a>
 					&nbsp; &nbsp; <a target="blank" href="https://informatics.xmu.edu.cn/info/1019/18398.htm">厦门大学个人主页 Xiamen University</a></p>
 									<br><br>
@@ -63,22 +63,21 @@
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
 <h3>个人简介 Biography</h3>
-	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位，
-		博士导师为宋健教授, IEEE Fellow, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
+	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位（导师：宋健教授, IEEE Fellow）, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
 		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授、硕士生导师。</p>
 
-	<p>已发表60余篇期刊与会议学术论文，出版学术专著5部，其中4部为第一作者，获得8项发明专利授权，其中2项为国家标准必要专利。
-		担任宽带电力载波通信国家标准起草人。获“福建省高层次人才”认定。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
-		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”称号。获ACM UbiComp 2021 CPD WS 优秀论文奖（通讯作者）。主持国家自然科学基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
-		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。以第一作者主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材、高等学校电子信息类专业系列教材。参与讲授一门本科生课程入选“福建省一流本科课程”。</p>
+	<p>已发表60余篇期刊与会议学术论文，出版学术专著5部，获得10项发明专利授权，其中2项为国家标准必要专利。
+		担任宽带电力载波通信国家标准起草人。获“福建省高层次人才”认定。获中国电子学会自然科学二等奖、福建省科技进步三等奖、
+		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”奖。获ACM UbiComp 2021 CPD WS 优秀论文奖。主持国家自然科学基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
+		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材、高等学校电子信息类专业系列教材。参与讲授一门本科生课程入选“福建省一流本科课程”。</p>
 
 	<p> 担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会Publication Chair、IEEE ISPLC 2021国际学术会议的TPC Chair, IEEE ICCC 2021大会Workshop Chair、IEEE ICC 2019大会Session Chair、IEEE ICCE 2019大会Track Chair，
-		以及包括IEEE ICC/Globecom在内的多个国际知名学术会议技术程序委员会委员。担任Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编辑或客座编辑。
-		IEEE高级会员、中国通信学会高级会员、ACM会员、中国电子学会会员。</p>
+		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编辑或客座编辑。
+		IEEE高级会员、中国通信学会高级会员、中国电子学会会员、ACM会员。</p>
 
-	<p>目前的研究兴趣为可见光通信、通信感知一体化、压缩感知、基于人工智能的通信技术。</p>
+	<p>目前的研究兴趣为通信感知一体化、可见光通信、压缩感知、基于人工智能的通信技术。</p>
 
-	<p><b>招收研究生、本科毕设学生和对科研感兴趣的同学，欢迎对相关方向感兴趣的同学联系</b>（可通过上述E-mail）</p>
+	<p><b>招收研究生、本科毕设学生和对科研感兴趣的同学，欢迎对相关方向感兴趣的同学联系</b>（电子邮件）</p>
 
 <p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012.
 	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song, IEEE Fellow.
@@ -86,20 +85,20 @@
 	He served as a Senior Engineer in the Networks Technology Research Department in Huawei Technologies, Co Ltd from 2017 to 2018.
 	He joined Xiamen University as an Assistant Professor in 2018. Currently, he is an Associate Professor and a Master Supervisor in School of Informatics, Xiamen University.</p>
 			   
-<p>Sicong Liu has published over 60 journal and conference research papers.He has authored five monographs, of which four as first author. He owns 8 Chinese invention patents, of which two are the necessary patents for
+<p>Sicong Liu has published over 60 journal and conference research papers.He has authored five monographs, of which four as first author. He owns ten Chinese invention patents, of which two are the necessary patents for
 	the national standards. He has contributed to the drafting of the Broadband Power Line Communications Standard in China. He is recognized as the  High-Level Talents of Fujian Province.
-	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3), the Third Prize in the Scientific Progress Award of Fujian Province (ranking 3),
+	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics, the Third Prize in the Scientific Progress Award of Fujian Province,
 	the Outstanding Doctoral Dissertation Award of Tsinghua University, and the EE Outstanding Academic Youth Award of Tsinghua University.
-	He has won the Best Paper Award of ACM UbiComp CPD WS, 2021, as corresponding author. He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China (NSFC), Natural Science Foundation of Fujian,
+	He has won the Best Paper Award of ACM UbiComp CPD WS, 2021. He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China (NSFC), Natural Science Foundation of Fujian,
 	and Youth Innovation Fund of Xiamen. He has participated in major projects including the State Key Research Project, the National Major Project of Science and Technology,
-	and the Major Project of Science and Technology of Fujian. He is the first author of a major textbook, which is included in the Textbook Project of the Higher Education Electronic Information Teaching Steering Committee, Department of Education of China.
+	and the Major Project of Science and Technology of Fujian. He is the editor of a major textbook, which is included in the Textbook Project of the Higher Education Electronic Information Teaching Steering Committee, Department of Education of China.
     He has taught a course for undergraduates, which is included in the Outstanding Undergraduate Courses of Fujian Province. </p>
 
 <p>	He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, Session Chair of IEEE ICC 2019, Track Chair of IEEE ICCE 2019,
 	and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.
 	He serves in the Editorial Board of academic journals including Future Internet Journal, Sensors Journal, and Frontiers in Communications and Networks.
 	He is a Senior Member of IEEE and China Institute of Communications (CIC), and a Member of ACM and China Institute of Electronics (CIE).</p>
-<p>His current research interests  lie in visible light communication (VLC), integrated sensing and communication (ISAC), compressed sensing (CS), and AI-assisted communications.</p>
+<p>His current research interests  lie in integrated sensing and communication (ISAC), visible light communication (VLC), compressed sensing (CS), and AI-assisted communications.</p>
 	<p>Graduate and undergraduate students interested in related research fields are welcome to contact me via E-mail.</p>
 
 <h3>教育学术经历 Education and Academic Experiences</h3>
@@ -118,29 +117,29 @@
 	<p>Aug. 2008-Jul. 2012 &nbsp; <b>Bachelor</b>, Department of Electronic Engineering, Tsinghua University</p>
 
 <h3>荣誉奖励 Honors and Awards</h3>
-	<p>&bull; ACM UbiComp CPD WS 优秀论文奖（通讯作者)，2021 </p>
+	<p>&bull; ACM UbiComp CPD WS 优秀论文奖，2021 </p>
 	<p>&bull; 福建省高层次人才，2021 </p>
 	<p>&bull; 福建省一流本科课程，2021 </p>
-	<p>&bull; 中国电子学会自然科学二等奖（排名第3），2019 </p>
-	<p>&bull; 福建省科技进步三等奖（排名第3），2019 </p>
+	<p>&bull; 中国电子学会自然科学二等奖，2019 </p>
+	<p>&bull; 福建省科技进步三等奖，2019 </p>
 	<p>&bull; 福建省引进高层次人才，2019 </p>
-	<p>&bull; 厦门市通信学会优秀论文一等奖（通讯作者），2019 </p>
+	<p>&bull; 厦门市通信学会优秀论文一等奖，2019 </p>
 	<p>&bull; 清华大学优秀博士学位论文奖, 2017 </p>
 	<p>&bull; 清华大学优秀博士毕业生, 2017 </p>
 	<p>&bull; 北京市优秀毕业生, 2017 </p>
-	<p>&bull; 清华大学电子系“电子之星”奖（科创类）, 2017 </p>
+	<p>&bull; 清华大学电子系科创“电子之星”奖, 2017 </p>
 	<p>&bull; 清华大学电子系“学术新秀”奖, 2016 </p>
 	<p>&bull; 博士研究生国家奖学金, 2016</p>
 	<p>&bull; 清华大学优秀研究生支持计划暨唐立新奖学金, 2015</p>
 	<p>&bull; 硕士研究生国家奖学金, 2014</p>
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
-	<p>&bull; Best Paper Award of ACM UbiComp CPD WS (As Corresponding Author), 2021 </p>
+	<p>&bull; Best Paper Award of ACM UbiComp CPD WS, 2021 </p>
 	<p>&bull; High-Level Talents of Fujian Province, 2021 </p>
 	<p>&bull; Outstanding Undergraduate Courses of Fujian Province, 2021</p>
-	<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3rd), 2019 </p>
-	<p>&bull; Third Prize of Fujian Science and Technology Progress Award (ranking 3rd), 2019 </p>
+	<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics, 2019 </p>
+	<p>&bull; Third Prize of Fujian Science and Technology Progress Award, 2019 </p>
 	<p>&bull; High-Level Introduced Talents of Fujian Province, 2019 </p>
-	<p>&bull; Best Paper Award of Xiamen Institute of Communications（First Prize, Corresponding Author），2019 </p>
+	<p>&bull; Best Paper Award of Xiamen Institute of Communications，2019 </p>
 	<p>&bull; Outstanding Doctoral Dissertation Award of Tsinghua University, 2017 </p>
 	<p>&bull; Outstanding PhD Graduate Award of Tsinghua University, 2017 </p>
 	<p>&bull; Outstanding Graduate Award of Beijing City, 2017 </p>
@@ -157,16 +156,16 @@
 	<!--<p>&bull; Tsinghua Second-Class Scholarship for Freshmen</p>-->
 
 <h3>科研项目 Research Grants</h3>
-	<p>&bull; 面向高可靠车联网通信的稀疏干扰消除方法研究，国家自然科学基金青年基金 （项目编号 61901403），2020年1月-2022年12月，主持</p>
-	<p>&nbsp;&nbsp; "Research on sparse interference cancellation methods for ultra-reliable vehicular communications," National Natural Science Foundation of China Youth Fund (No.61901403), 2020.01-2022.12 (PI). </p>
-	<p>&bull; 面向新一代无线通信的多重压缩感知与稀疏学习技术研究，福建省自然科学基金（2019J05001），2019年7月-2022年6月，主持</p>
-	<p>&nbsp; "Study on compressed sensing and sparse learning technologies for next-generation wireless communications," Natural Science Foundation of Fujian Province of China (No.2019J05001), 2019.07-2022.06 (PI). </p>
-	<p>&bull; 复杂5G无线环境下的稀疏干扰智能消除方法，厦门市青年创新基金（3502Z20206039），2020年7月-2023年6月，主持</p>
-	<p>&nbsp; "Intelligent Methods of Sparse Interference Mitigation for Complex 5G Wireless Environments", the Youth Innovation Fund of Xiamen (No.3502Z20206039), 2020.07-2023.06 (PI)</p>
-	<p>&bull; 基于压缩感知与机器学习的5G无线通信关键技术研究，中央高校基本科研项目（20720190029），2019年1月-2019年12月，主持</p>
-	<p>&nbsp; "Study on key technologies of 5G wireless communications based on compressed sensing and machine learning," Fundamental Research Funds for the Central Universities of China (No.20720190029), 2019.01-2019.12 (PI). </p>
-	<p>&bull; 基于机器学习稀疏干扰对抗车联网安全，美亚柏科产学研项目，2018年12月-2020年6月，主持</p>
-	<p>&nbsp; "Machine learning based sparse interference countermeasure for vehicle networks security," Joint Research Project with Meiya Pico, 2019.12-2020.06 (PI). </p>
+	<p>&bull; 面向高可靠车联网通信的稀疏干扰消除方法研究，国家自然科学基金青年基金，2020年1月-2022年12月，主持</p>
+	<p>&nbsp;&nbsp; "Research on sparse interference cancellation methods for ultra-reliable vehicular communications," National Natural Science Foundation of China Youth Fund, 2020.01-2022.12 (PI). </p>
+	<p>&bull; 面向新一代无线通信的多重压缩感知与稀疏学习技术研究，福建省自然科学基金，2019年7月-2022年6月，主持</p>
+	<p>&nbsp; "Study on compressed sensing and sparse learning technologies for next-generation wireless communications," Natural Science Foundation of Fujian Province of China, 2019.07-2022.06 (PI). </p>
+	<p>&bull; 复杂5G无线环境下的稀疏干扰智能消除方法，厦门市青年创新基金，2020年7月-2023年6月，主持</p>
+	<p>&nbsp; "Intelligent Methods of Sparse Interference Mitigation for Complex 5G Wireless Environments", the Youth Innovation Fund of Xiamen, 2020.07-2023.06 (PI)</p>
+	<p>&bull; 基于压缩感知与机器学习的5G无线通信关键技术研究，中央高校基本科研项目，2019年1月-2019年12月，主持</p>
+	<p>&nbsp; "Study on key technologies of 5G wireless communications based on compressed sensing and machine learning," Fundamental Research Funds for the Central Universities of China, 2019.01-2019.12 (PI). </p>
+	<p>&bull; 基于机器学习稀疏干扰对抗车联网安全，产学研合作项目，2018年12月-2020年6月，主持</p>
+	<p>&nbsp; "Machine learning based sparse interference countermeasure for vehicle networks security," Industry-Academia Joint Research Project, 2019.12-2020.06 (PI). </p>
 
 
 <h3>学术兼职与服务 Academia Services</h3>
@@ -184,9 +183,11 @@
 <h3>教学工作 Teaching</h3>
 	<p>&bull; CST304: Digital Signal Processing, Undergraduates, Fall 2018/2019, Xiamen University Malaysia (English)</p>
 	<p>&bull; CST103: Programming Language (C), Undergraduates, Fall 2018/2019, Xiamen University Malaysia (English)</p>
-	<p>&bull; 通信电路原理, 本科生, 2018/2019学年春季学期、2019/2020学年春季学期，厦门大学</p>
-	<p>&bull; 无线通信原理, 本科生, 2019/2020学年春季学期, 厦门大学</p>
-	<p>&bull; 数字信号处理实验, 本科生, 2019/2020学年秋季学期、2020/2021学年秋季学期，厦门大学</p>
+	<p>&bull; 通信电路原理, 本科生, 2018/2019、2019/2020、2020/2021、2021/2022学年，厦门大学</p>
+	<p>&bull; 无线通信原理, 本科生, 2019/2020、2020/2021、2021/2022学年, 厦门大学</p>
+	<p>&bull; 数字电视技术, 本科生, 2022/2023学年，厦门大学</p>
+	<p>&bull; 数字信号处理实验, 本科生, 2019/2020、2020/2021学年，厦门大学</p>
+	<p>&bull; 数字通信, 研究生, 2022/2023学年，厦门大学</p>
 
 <h3>发表论著 Selected Publications</h3>
 
@@ -200,7 +201,7 @@
 	<p>&bull; 杨昉，<b>刘思聪</b>，高镇，“5G移动通信空口新技术”，北京：电子工业出版社，2020年7月</p>
 	<p> &nbsp; &nbsp; F. Yang, <b>S. Liu</b>, Z. Gao, "New Air Interface Technologies for 5G Mobile Communications," <i>Beijing: Publishing House of Electronics Industry</i>, July 2020, ISBN: 978-7-121-39193-4.</p>
 
-	<p>&bull; <b>刘思聪</b>，肖亮，“无线通信与安全”，北京：清华大学出版社，2021年4月 （教育部高等学校电子信息类专业教学指导委员会规划教材、高等学校电子信息类专业系列教材）</p>
+	<p>&bull; <b>刘思聪</b>，肖亮，“无线通信与安全”，北京：清华大学出版社，2021年4月</p>
 	<p> &nbsp; &nbsp; <b>S. Liu</b>, L. Xiao, "Wireless Communications and Security," <i>Beijing: Tsinghua University Press</i>, Apr. 2021, ISBN: 978-7-302-57684-6.</p>
 
 	<p>&bull; L. Xiao, D. Jiang, <b>S. Liu</b>, "Reinforcement Learning Based Communication Security for Unmanned Aerial Vehicles," (Book Chapter) In: Chen, X., Susilo, W., Bertino, E. (eds), "Cyber Security Meets Machine Learning," <i>Springer</i>, Jan. 2021, ISBN: 978-981-33-6726-5.
@@ -310,6 +311,10 @@
 
 <br>
 <p><strong>会议论文 Conferences</strong></p>
+	<p>&bull; X. Liu, <b>S. Liu</b>*, "Jamming for Secrecy: Reinforcement Learning Based Anti-Eavesdropping Visible Light Communication,” <i>2022 IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, pp. 2053-2058, Aug. 2022.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/9838520">Abstract</a>][<a target="blank"  href="papers/ICC22liu.pdf">PDF</a>][<a target="blank"  href="papers/ICC22liu.bib">bibtex</a>]</p>
+
+
 	<p>&bull; T. Wei, D. Su and <b>S. Liu</b>*, "Generative Adversarial Network Enabled Sparse Signal Compression and Recovery for Internet of Medical Things," <i>ACM UbiComp'21</i>, pp. 678–683, Sept 2021.
 		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480404">Abstract</a>][<a target="blank"  href="papers/UbiComp21wei.pdf">PDF</a>][<a target="blank"  href="papers/UbiComp21wei.txt">bibtex</a>]</p>
 
