--- a/sicongliu.html
+++ b/sicongliu.html
@@ -63,12 +63,12 @@
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
 <h3>个人简介 Biography</h3>
-	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位（导师：宋健教授, IEEE Fellow）, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
+	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位（导师：宋健教授）, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
 		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授、硕士生导师。</p>
 
 	<p>已发表60余篇期刊与会议学术论文，出版学术专著5部，获得10项发明专利授权，其中2项为国家标准必要专利。
 		担任宽带电力载波通信国家标准起草人。获“福建省高层次人才”认定。获中国电子学会自然科学二等奖、福建省科技进步三等奖、
-		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”奖。获ACM UbiComp 2021 CPD WS 优秀论文奖。主持国家自然科学基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
+		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”奖。获ACM UbiComp 2021 CPD优秀论文奖。主持国家自然科学基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
 		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材、高等学校电子信息类专业系列教材。参与讲授一门本科生课程入选“福建省一流本科课程”。</p>
 
 	<p> 担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会Publication Chair、IEEE ISPLC 2021国际学术会议的TPC Chair, IEEE ICCC 2021大会Workshop Chair、IEEE ICC 2019大会Session Chair、IEEE ICCE 2019大会Track Chair，
@@ -80,7 +80,7 @@
 	<p><b>招收研究生、本科毕设学生和对科研感兴趣的同学，欢迎对相关方向感兴趣的同学联系</b>（电子邮件）</p>
 
 <p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012.
-	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song, IEEE Fellow.
+	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song.
 	From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.
 	He served as a Senior Engineer in the Networks Technology Research Department in Huawei Technologies, Co Ltd from 2017 to 2018.
 	He joined Xiamen University as an Assistant Professor in 2018. Currently, he is an Associate Professor and a Master Supervisor in School of Informatics, Xiamen University.</p>
@@ -89,7 +89,7 @@
 	the national standards. He has contributed to the drafting of the Broadband Power Line Communications Standard in China. He is recognized as the  High-Level Talents of Fujian Province.
 	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics, the Third Prize in the Scientific Progress Award of Fujian Province,
 	the Outstanding Doctoral Dissertation Award of Tsinghua University, and the EE Outstanding Academic Youth Award of Tsinghua University.
-	He has won the Best Paper Award of ACM UbiComp CPD WS, 2021. He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China (NSFC), Natural Science Foundation of Fujian,
+	He has won the Best Paper Award of ACM UbiComp 2021 CPD. He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China (NSFC), Natural Science Foundation of Fujian,
 	and Youth Innovation Fund of Xiamen. He has participated in major projects including the State Key Research Project, the National Major Project of Science and Technology,
 	and the Major Project of Science and Technology of Fujian. He is the editor of a major textbook, which is included in the Textbook Project of the Higher Education Electronic Information Teaching Steering Committee, Department of Education of China.
     He has taught a course for undergraduates, which is included in the Outstanding Undergraduate Courses of Fujian Province. </p>
@@ -117,7 +117,7 @@
 	<p>Aug. 2008-Jul. 2012 &nbsp; <b>Bachelor</b>, Department of Electronic Engineering, Tsinghua University</p>
 
 <h3>荣誉奖励 Honors and Awards</h3>
-	<p>&bull; ACM UbiComp CPD WS 优秀论文奖，2021 </p>
+	<p>&bull; ACM UbiComp 2021 CPD 优秀论文奖，2021 </p>
 	<p>&bull; 福建省高层次人才，2021 </p>
 	<p>&bull; 福建省一流本科课程，2021 </p>
 	<p>&bull; 中国电子学会自然科学二等奖，2019 </p>
@@ -133,7 +133,7 @@
 	<p>&bull; 清华大学优秀研究生支持计划暨唐立新奖学金, 2015</p>
 	<p>&bull; 硕士研究生国家奖学金, 2014</p>
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
-	<p>&bull; Best Paper Award of ACM UbiComp CPD WS, 2021 </p>
+	<p>&bull; Best Paper Award of ACM UbiComp 2021 CPD, 2021 </p>
 	<p>&bull; High-Level Talents of Fujian Province, 2021 </p>
 	<p>&bull; Outstanding Undergraduate Courses of Fujian Province, 2021</p>
 	<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics, 2019 </p>
@@ -216,7 +216,11 @@
 <br>
 <p><strong>期刊论文 Journals</strong></p>
 
-	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Learning-Based Efficient Sparse Sensing and Recovery for Privacy-Aware IoMT," <i>IEEE Internet of Things Journal</i>, doi: 10.1109/JIOT.2022.3163593, Mar. 2022.
+	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Visible Light Integrated Positioning and Communication: A Multi-Task Federated Learning Framework," <i>IEEE Transactions on Mobile Computing</i>, doi: 10.1109/TMC.2022.3207164, Sept. 2022.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/9894087">Abstract</a>][<a target="blank"  href="papers/TMC22wei.pdf">PDF</a>][<a target="blank"  href="papers/TMC22wei.txt">bibtex</a>]</p>
+
+
+	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Learning-Based Efficient Sparse Sensing and Recovery for Privacy-Aware IoMT," <i>IEEE Internet of Things Journal</i>, vol. 9, no. 12, pp. 9948-9959, doi: 10.1109/JIOT.2022.3163593, June 2022.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9745135">Abstract</a>][<a target="blank"  href="papers/JIOT22wei.pdf">PDF</a>][<a target="blank"  href="papers/JIOT22wei.txt">bibtex</a>]</p>
 
 
