--- a/sicongliu.html
+++ b/sicongliu.html
@@ -75,9 +75,8 @@
 		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编辑或客座编辑。
 		IEEE高级会员、中国通信学会高级会员、中国电子学会会员、ACM会员。</p>
 
-	<p>目前的研究兴趣为通信感知一体化、可见光通信、压缩感知、基于人工智能的通信技术。</p>
-
-	<p><b>招收研究生、本科毕设学生和对科研感兴趣的同学，欢迎对相关方向感兴趣的同学联系</b>（电子邮件）</p>
+	<p>目前的研究兴趣为通信感知一体化、可见光通信、压缩感知、基于人工智能的通信技术。<b>欢迎对科研和相关方向感兴趣的同学联系我</b>（电子邮件）</p>
+	
 
 <p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012.
 	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song.
