--- a/sicongliu.html
+++ b/sicongliu.html
@@ -39,10 +39,10 @@
 						<img src="images/head.jpg" width = 120 alt="Figure 1" />
 						
 					</div>
-					<h2>Dr. Sicong Liu 刘思聪</h2>
+					<h2>刘思聪 Sicong Liu</h2>
 					<p>厦门大学信息学院 副教授, 清华大学电子工程系 博士</p>
 					<p>Associate Professor, School of Informatics, Xiamen University</p>
-					<p>PhD, Electronic Engineering, Tsinghua University</p>
+					<p>PhD, Dept. Electronic Engineering, Tsinghua University</p>
 					<p>地址：福建省厦门市思明区厦门大学海韵园，邮编：361005</p>
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
 					<p>E-mail: liusc (at) xmu.edu.cn  </p>
@@ -76,7 +76,7 @@
 		IEEE高级会员、中国通信学会高级会员、中国电子学会会员、ACM会员。</p>
 
 	<p>目前的研究兴趣为通信感知一体化、可见光通信、压缩感知、基于人工智能的通信技术。<b>欢迎对科研和相关方向感兴趣的同学联系我</b>（电子邮件）</p>
-	
+
 
 <p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012.
 	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song.
