--- a/sicongliu.html
+++ b/sicongliu.html
@@ -215,6 +215,13 @@
 <br>
 <p><strong>期刊论文 Journals</strong></p>
 
+	<p>&bull; X. Tang, <b>S. Liu*</b>, X. Du, and M. Guizani, "Sparsity-Aware Intelligent Massive Random Access Control in Open RAN: A Reinforcement Learning Based Approach," submitted to <i>IEEE Journal on Selected Areas in Communications</i>, Dec. 2022.
+		[<a target="blank" href="https://arxiv.org/abs/2303.02657">Abstract</a>]</p>
+
+	<p>&bull; D. Su, X. Wang, <b>S. Liu*</b> and W. Ding, "Four-dimensional indoor visible light positioning: A deep-learning-based perspective," <i>Journal of the Franklin Institute</i>, vol. 360, no. 6, pp. 4071-4090, April 2023.
+		[<a target="blank" href="https://www.sciencedirect.com/science/article/pii/S0016003223000923">Abstract</a>][<a target="blank"  href="papers/JFI23su.pdf">PDF</a>][<a target="blank"  href="papers/JFI23su.txt">bibtex</a>]</p>
+
+
 	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Visible Light Integrated Positioning and Communication: A Multi-Task Federated Learning Framework," <i>IEEE Transactions on Mobile Computing</i>, doi: 10.1109/TMC.2022.3207164, Sept. 2022.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9894087">Abstract</a>][<a target="blank"  href="papers/TMC22wei.pdf">PDF</a>][<a target="blank"  href="papers/TMC22wei.txt">bibtex</a>]</p>
 
@@ -314,6 +321,21 @@
 
 <br>
 <p><strong>会议论文 Conferences</strong></p>
+
+	<p>&bull; Y. Mou, <b>S. Liu</b>*, "Channel Estimation for Underwater Visible Light Communication: A Sparse Learning Perspective,” to appear in <i>2023 IEEE International Conference on Communications (ICC)</i>, Rome, Italy, pp. 1-6, May 2023.
+		[<a target="blank" href="https://arxiv.org/abs/2303.07248">Abstract</a>]</p>
+
+	<p>&bull; X. Wang, <b>S. Liu</b>*, "Multi-Target Cooperative Visible Light Positioning: A Compressed Sensing Based Framework,” to appear in <i>2023 IEEE International Conference on Communications (ICC)</i>, Rome, Italy, pp. 1-6, May 2023.
+		[<a target="blank" href="https://arxiv.org/abs/2303.02643">Abstract</a>]</p>
+
+
+	<p>&bull; T. Wei and <b>S. Liu</b>*, "Privacy-Preserving Cooperative Visible Light Positioning for Nonstationary Environment: A Federated Learning Perspective," to appear in <i>ACM UbiComp'22</i>, pp. 1–6, Sept 2022.
+		[<a target="blank" href="https://arxiv.org/abs/2303.06361">Abstract</a>]</p>
+
+    <p>&bull; X. Tang, and <b>S. Liu</b>*, "Power and Interference Control for VLC-Based UDN: A Reinforcement Learning Approach," to appear in <i>ACM UbiComp'22</i>, pp. 1–6, Sept 2022.
+		[<a target="blank" href="https://arxiv.org/abs/2303.05448">Abstract</a>]</p>
+
+
 	<p>&bull; X. Liu, <b>S. Liu</b>*, "Jamming for Secrecy: Reinforcement Learning Based Anti-Eavesdropping Visible Light Communication,” <i>2022 IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, pp. 2053-2058, Aug. 2022.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9838520">Abstract</a>][<a target="blank"  href="papers/ICC22liu.pdf">PDF</a>][<a target="blank"  href="papers/ICC22liu.bib">bibtex</a>]</p>
 
