--- a/sicongliu.html
+++ b/sicongliu.html
@@ -71,7 +71,7 @@
 		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”奖。获ACM UbiComp 2021 CPD优秀论文奖。主持国家自然科学基金、移动通信国家重点实验室开放课题、福建省自然科学基金、厦门市青年创新基金等科研项目。
 		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材。</p>
 
-	<p> IEEE高级会员、中国通信学会高级会员、中国电子学会会员、ACM会员。参与多个国际学术会议的组织工作，包括担任 IEEE SmartGridComm 2019 的 Publication Chair，IEEE ISPLC 2021 的 TPC Chair, ACM UbiComp CPD 2022 的 TPC Chair, IEEE ICCC 2021 的 Workshop Chair，IEEE ICC 2019 的 Session Chair，IEEE ICCE 2019 的 Track Chair，
+	<p> IEEE高级会员、中国通信学会高级会员、中国电子学会会员、ACM会员。参与多个国际学术会议的组织工作，包括担任 IEEE SmartGridComm 2019 的 Publication Chair，IEEE ISPLC 2021 的 TPC Chair, ACM UbiComp CPD 2022 的 TPC Chair, IEEE ICCC 2021 的 Workshop Chair，IEEE ICCE 2019 的 Track Chair，
 		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Digital Signal Processing, Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编委或特邀编委。
 		</p>
 
@@ -176,7 +176,7 @@
 	<p>&bull; Workshop Chair, IEEE International Conference on Communications in China (ICCC) 2021</p>
 	<p>&bull; Associate Editor, Frontiers in Communications and Networks, 2020</p>
 	<p>&bull; Publication Chair, IEEE SmartGridComm 2019</p>
-	<p>&bull; Track Chair, EEE ICCE 2019</p>
+	<p>&bull; Track Chair, IEEE ICCE 2019</p>
 	<p>&bull; Guest Editor, Future Internet Journal, 2017</p>
 	<p>&bull; TPC member, IEEE ICC, Globecom, SmartGridComm, WCNC, VTC, IWCMC, ICCC, ICSCC, WEDGE. </p>
 	<p>&bull; Reviewer, IEEE JSAC, TCOM, TSP, TWC, TVT, TIFS, TDSC, IoTJ, TBC, COMML, WCOMML.</p>
@@ -193,21 +193,21 @@
 <h3>发表论著 Selected Publications</h3>
 
 <p><strong>出版专著 Monographs & Book Chapters</strong></p>
-	<p>&bull; Research on the Key Technologies in Narrowband Interference and Impulsive Noise Mitigation and Cancellation, <i>Springer</i>, Sep. 2020, ISBN: 978-981-15-4723-2.
+	<p>&bull; Research on the Key Technologies in Narrowband Interference and Impulsive Noise Mitigation and Cancellation, <i>Springer</i>, Sep. 2020, 978-981-15-4723-2.
 		[<a target="blank" href="https://www.springer.com/gp/book/9789811547232">Abstract</a>][<a target="blank" href="papers/Springer2020.pdf">PDF</a>][<a target="blank" href="papers/Springer2020.txt">bibtex</a>]</p>
 
 	<p>&bull; 非高斯特殊噪声干扰的抑制与消除：从经典信号处理到压缩感知方法，电子工业出版社，2019年5月</p>
-	<p>&nbsp;&nbsp;&nbsp;Non-Gaussian Noise and Interference Mitigation and Cancellation:From Classical Signal Processing to Compressed Sensing Methods, <i>Publishing House of Electronics Industry</i>, May 2019, ISBN: 978-7-121-36455-6.</p>
+	<p>&nbsp;&nbsp;&nbsp;Non-Gaussian Noise and Interference Mitigation and Cancellation:From Classical Signal Processing to Compressed Sensing Methods, <i>Publishing House of Electronics Industry</i>, May 2019, 978-7-121-36455-6.</p>
 
 	<p>&bull; 5G移动通信空口新技术，电子工业出版社，2020年7月</p>
-	<p> &nbsp; &nbsp; New Air Interface Technologies for 5G Mobile Communications, <i>Publishing House of Electronics Industry</i>, July 2020, ISBN: 978-7-121-39193-4.</p>
+	<p> &nbsp; &nbsp; New Air Interface Technologies for 5G Mobile Communications, <i>Publishing House of Electronics Industry</i>, July 2020, 978-7-121-39193-4.</p>
 
 	<p>&bull; 无线通信与安全，清华大学出版社，2021年4月</p>
-	<p> &nbsp; &nbsp; Wireless Communications and Security, <i>Tsinghua University Press</i>, Apr. 2021, ISBN: 978-7-302-57684-6.</p>
+	<p> &nbsp; &nbsp; Wireless Communications and Security, <i>Tsinghua University Press</i>, Apr. 2021, 978-7-302-57684-6.</p>
 
-	<p>&bull; Reinforcement Learning Based Communication Security for Unmanned Aerial Vehicles, (Book Chapter) In: Cyber Security Meets Machine Learning, <i>Springer</i>, Jan. 2021, ISBN: 978-981-33-6726-5.
-		[<a target="blank" href="https://link.springer.com/chapter/10.1007/978-981-33-6726-5_3">Abstract</a>][<a target="blank" href="papers/Springer_chapter21.pdf">PDF</a>][<a target="blank" href="papers/Springer_chapter21.txt">bibtex</a>]</p>
-
+	<p>&bull; Reinforcement Learning Based Communication Security for Unmanned Aerial Vehicles, (Book Chapter) In: Cyber Security Meets Machine Learning, <i>Springer</i>, Jan. 2021, 978-981-33-6726-5.
+		<!--[<a target="blank" href="https://link.springer.com/chapter/10.1007/978-981-33-6726-5_3">Abstract</a>][<a target="blank" href="papers/Springer_chapter21.pdf">PDF</a>][<a target="blank" href="papers/Springer_chapter21.txt">bibtex</a>]</p>
+		-->
 
 	<p>
 		<img src="images/book_springer_research_on_key_tech.bmp" width = 120/> <img src="images/book_phei.jpg" width = 140/> <img src="images/book_5G.jpg" width = 120/>
