--- a/sicongliu.html
+++ b/sicongliu.html
@@ -161,7 +161,7 @@
 	<p>&nbsp; Natural Science Foundation of Fujian Province of China, Study on compressed sensing and sparse learning technologies for next-generation wireless communications, 2019.07-2022.06 (PI). </p>
 	<p>&bull; 厦门市自然科学基金青年创新基金，复杂5G无线环境下的稀疏干扰智能消除方法，2020年7月-2023年6月，主持</p>
 	<p>&nbsp; Youth Innovation Fund of Natural Science Fund of Xiamen, Intelligent Methods of Sparse Interference Mitigation for Complex 5G Wireless Environments, 2020.07-2023.06 (PI)</p>
-	<p>&bull; 基于压缩感知与机器学习的5G无线通信关键技术研究，中央高校基本科研项目，2019年1月-2019年12月，主持</p>
+	<p>&bull; 中央高校基本科研项目，基于压缩感知与机器学习的5G无线通信关键技术研究，2019年1月-2019年12月，主持</p>
 	<p>&nbsp; Fundamental Research Funds for the Central Universities of China, Study on key technologies of 5G wireless communications based on compressed sensing and machine learning, 2019.01-2019.12 (PI). </p>
 	<p>&bull; 产学研合作项目课题-美亚柏科，基于机器学习的稀疏干扰对抗车联网安全技术研究，2018年12月-2020年6月，主持</p>
 	<p>&nbsp; Industry-Academia Joint Research Project with Meiya Pico, Machine learning based sparse interference countermeasure for vehicle networks security, 2019.12-2020.06 (PI). </p>
@@ -217,7 +217,8 @@
 <br>
 <p><strong>期刊论文 Journals</strong></p>
 
-	<p>&bull; Y. Liao, <b>S. Liu*</b>, X. Hong, J. Shi and L. Cheng, "Integration of Communication and Navigation Technologies Towards LEO-Enabled 6G Networks: A Survey," to appear in <i>Space: Science & Technology</i>, pp. 1-31, Oct. 2023.</p>
+	<p>&bull; Y. Liao, <b>S. Liu*</b>, X. Hong, J. Shi and L. Cheng, "Integration of Communication and Navigation Technologies Towards LEO-Enabled 6G Networks: A Survey," <i>Space: Science & Technology (Science Partner Journals)</i>, pp. 1-31, Oct. 2023.
+	[<a target="blank" href="https://spj.science.org/doi/10.34133/space.0092">DOI: 10.34133/space.0092</a>]</p>
 
 <p>&bull; <b>S. Liu*</b>, D. Su, T. Wei, X. Wang, "Multi-node Cooperation Based Robust Visible Light Intelligent Positioning," <i>Telecommunications Science</i>, vol. 39, no. 5, pp. 28-41, May 2023.
 		[<a target="blank" href="https://www.infocomm-journal.com/dxkx/CN/Y2023/V39/I5/28">Abstract</a>]</p>
