--- a/sicongliu.html
+++ b/sicongliu.html
@@ -217,7 +217,13 @@
 <br>
 <p><strong>期刊论文 Journals</strong></p>
 
-	<p>&bull; Y. Liao, <b>S. Liu*</b>, X. Hong, J. Shi and L. Cheng, "Integration of Communication and Navigation Technologies Towards LEO-Enabled 6G Networks: A Survey," <i>Space: Science & Technology (Science Partner Journals)</i>, pp. 1-31, Oct. 2023.
+	<p>&bull; X. Tang, <b>S. Liu*</b>, X. Du and M. Guizani, "Sparsity-Aware Intelligent Massive Random Access Control for Massive MIMO Networks: A Reinforcement Learning Based Approach," <i>IEEE Transactions on Wireless Communications</i>, doi: 10.1109/TWC.2024.3365153, Feb. 2024.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10443316">Abstract</a>][<a target="blank"  href="papers/TWC24tang.pdf">PDF</a>][<a target="blank"  href="papers/TWC24tang.txt">bibtex</a>]</p>
+
+	<p>&bull; <b>S. Liu*</b>, X. Wang, J. Song and Z. Han, "Cooperative Robotics Visible Light Positioning: An Intelligent Compressed Sensing and GAN-Enabled Framework," <i>IEEE Journal of Selected Topics in Signal Processing</i>, doi: 10.1109/JSTSP.2024.3368661, Feb. 2024.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10443444">Abstract</a>][<a target="blank"  href="papers/JSTSP24wang.pdf">PDF</a>][<a target="blank"  href="papers/JSTSP24wang.txt">bibtex</a>]</p>
+
+	<p>&bull; Y. Liao, <b>S. Liu*</b>, X. Hong, J. Shi and L. Cheng, "Integration of Communication and Navigation Technologies Towards LEO-Enabled 6G Networks: A Survey," <i>Space: Science & Technology (Science Partner Journals)</i>, vol. 3, no. 92, pp. 1-31, Oct. 2023.
 	[<a target="blank" href="https://spj.science.org/doi/10.34133/space.0092">DOI: 10.34133/space.0092</a>]</p>
 
 <p>&bull; <b>S. Liu*</b>, D. Su, T. Wei, X. Wang, "Multi-node Cooperation Based Robust Visible Light Intelligent Positioning," <i>Telecommunications Science</i>, vol. 39, no. 5, pp. 28-41, May 2023.
@@ -230,11 +236,11 @@
 		[<a target="blank" href="https://ieeexplore.ieee.org/abstract/document/10134537">Abstract</a>]</p>
 
 
-	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Visible Light Integrated Positioning and Communication: A Multi-Task Federated Learning Framework," <i>IEEE Transactions on Mobile Computing</i>, doi: 10.1109/TMC.2022.3207164, Sept. 2022.
+	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Visible Light Integrated Positioning and Communication: A Multi-Task Federated Learning Framework," <i>IEEE Transactions on Mobile Computing</i>, vol. 22, no. 12, pp. 7086-7103, Dec. 2023.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9894087">Abstract</a>][<a target="blank"  href="papers/TMC22wei.pdf">PDF</a>][<a target="blank"  href="papers/TMC22wei.txt">bibtex</a>]</p>
 
 
-	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Learning-Based Efficient Sparse Sensing and Recovery for Privacy-Aware IoMT," <i>IEEE Internet of Things Journal</i>, vol. 9, no. 12, pp. 9948-9959, doi: 10.1109/JIOT.2022.3163593, June 2022.
+	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Learning-Based Efficient Sparse Sensing and Recovery for Privacy-Aware IoMT," <i>IEEE Internet of Things Journal</i>, vol. 9, no. 12, pp. 9948-9959, June 2022.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9745135">Abstract</a>][<a target="blank"  href="papers/JIOT22wei.pdf">PDF</a>][<a target="blank"  href="papers/JIOT22wei.txt">bibtex</a>]</p>
 
 
