--- a/sicongliu.html
+++ b/sicongliu.html
@@ -243,6 +243,8 @@
 	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Learning-Based Efficient Sparse Sensing and Recovery for Privacy-Aware IoMT," <i>IEEE Internet of Things Journal</i>, vol. 9, no. 12, pp. 9948-9959, June 2022.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9745135">Abstract</a>][<a target="blank"  href="papers/JIOT22wei.pdf">PDF</a>][<a target="blank"  href="papers/JIOT22wei.txt">bibtex</a>]</p>
 
+	<p>&bull; <b>S. Liu</b>, F. Yang, D. Li, R. Yao, and J. Song*, "Power Line Communication with Robust Timing and Carrier Recovery against Narrowband Interference for Smart Grid," <i>Sensors</i>, vol. 22, no. 11, pp. 4013, May 2022.
+		[<a target="blank" href="https://www.mdpi.com/1424-8220/22/11/4013">Abstract</a>][<a target="blank"  href="papers/Sensors22liu.pdf">PDF</a>][<a target="blank"  href="papers/Sensors22liu.bib">bibtex</a>]</p>
 
 <p>&bull; <b>S. Liu*</b> and X. Huang, "Sparsity-aware channel estimation for mmWave massive MIMO: A deep CNN-based approach," <i>China Communications</i>,  vol. 18, no. 6, pp. 162-171, Jun. 2021.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9459572">Abstract</a>][<a target="blank"  href="papers/CNCOM21liu.pdf">PDF</a>][<a target="blank"  href="papers/CNCOM21liu.txt">bibtex</a>]</p>
@@ -329,15 +331,15 @@
 <br>
 <p><strong>会议论文 Conferences</strong></p>
 
-	<p>&bull; Y. Mou, <b>S. Liu</b>*, "Channel Estimation for Underwater Visible Light Communication: A Sparse Learning Perspective,” to appear in <i>2023 IEEE International Conference on Communications (ICC)</i>, Rome, Italy, pp. 1-6, May 2023.
-		[<a target="blank" href="https://arxiv.org/abs/2303.07248">Abstract</a>]</p>
+	<p>&bull; Y. Mou, <b>S. Liu</b>*, "Channel Estimation for Underwater Visible Light Communication: A Sparse Learning Perspective,” <i>2023 IEEE International Conference on Communications (ICC) Workshops</i>, Rome, Italy, pp. 943-948, May 2023.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10283706">Abstract</a>]</p>
 
-	<p>&bull; X. Wang, <b>S. Liu</b>*, "Multi-Target Cooperative Visible Light Positioning: A Compressed Sensing Based Framework,” to appear in <i>2023 IEEE International Conference on Communications (ICC)</i>, Rome, Italy, pp. 1-6, May 2023.
-		[<a target="blank" href="https://arxiv.org/abs/2303.02643">Abstract</a>]</p>
+	<p>&bull; X. Wang, <b>S. Liu</b>*, "Multi-Target Cooperative Visible Light Positioning: A Compressed Sensing Based Framework,” to appear in <i>2023 IEEE International Conference on Communications (ICC)</i>, Rome, Italy, pp. 3290-3295, May 2023.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10278778">Abstract</a>]</p>
 
 
-	<p>&bull; T. Wei and <b>S. Liu</b>*, "Privacy-Preserving Cooperative Visible Light Positioning for Nonstationary Environment: A Federated Learning Perspective," <i>ACM UbiComp'22</i>, pp. 1–6, Sept 2022.
-		[<a target="blank" href="https://arxiv.org/abs/2303.06361">Abstract</a>]</p>
+	<p>&bull; T. Wei and <b>S. Liu</b>*, "Privacy-Preserving Cooperative Visible Light Positioning for Nonstationary Environment: A Federated Learning Perspective," <i>ACM UbiComp'22</i>, pp. 450–455, Sept 2022.
+		[<a target="blank" href="https://dl.acm.org/doi/10.1145/3544793.3560406">Abstract</a>]</p>
 
     <p>&bull; X. Tang, and <b>S. Liu</b>*, "Power and Interference Control for VLC-Based UDN: A Reinforcement Learning Approach," <i>ACM UbiComp'22</i>, pp. 432-437, Sept 2022.
 		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3544793.3560403">Abstract</a>]</p>
