--- a/sicongliu.html
+++ b/sicongliu.html
@@ -331,12 +331,11 @@
 <br>
 <p><strong>会议论文 Conferences</strong></p>
 
-	<p>&bull; Y. Mou, <b>S. Liu</b>*, "Channel Estimation for Underwater Visible Light Communication: A Sparse Learning Perspective,” <i>2023 IEEE International Conference on Communications (ICC) Workshops</i>, Rome, Italy, pp. 943-948, May 2023.
-		[<a target="blank" href="https://ieeexplore.ieee.org/document/10283706">Abstract</a>]</p>
-
-	<p>&bull; X. Wang, <b>S. Liu</b>*, "Multi-Target Cooperative Visible Light Positioning: A Compressed Sensing Based Framework,” to appear in <i>2023 IEEE International Conference on Communications (ICC)</i>, Rome, Italy, pp. 3290-3295, May 2023.
+	<p>&bull; X. Wang, <b>S. Liu</b>*, "Multi-Target Cooperative Visible Light Positioning: A Compressed Sensing Based Framework,” <i>2023 IEEE International Conference on Communications (ICC)</i>, Rome, Italy, pp. 3290-3295, May 2023.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10278778">Abstract</a>]</p>
 
+	<p>&bull; Y. Mou, <b>S. Liu</b>*, "Channel Estimation for Underwater Visible Light Communication: A Sparse Learning Perspective,” <i>2023 IEEE International Conference on Communications (ICC) Workshops</i>, Rome, Italy, pp. 943-948, May 2023.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10283706">Abstract</a>]</p>
 
 	<p>&bull; T. Wei and <b>S. Liu</b>*, "Privacy-Preserving Cooperative Visible Light Positioning for Nonstationary Environment: A Federated Learning Perspective," <i>ACM UbiComp'22</i>, pp. 450–455, Sept 2022.
 		[<a target="blank" href="https://dl.acm.org/doi/10.1145/3544793.3560406">Abstract</a>]</p>
