--- a/sicongliu.html
+++ b/sicongliu.html
@@ -64,7 +64,7 @@
 -->
 <h3>个人简介 Biography</h3>
 	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位，导师宋健教授, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
-		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授、硕士生导师。</p>
+		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授、硕士生导师。厦门大学第八届教职工代表大会正式代表。</p>
 
 	<p>已发表60余篇期刊与会议学术论文，出版学术专著4部、专著章节1部，获得10项发明专利授权。
 		担任一项宽带通信国家标准起草人。获“福建省高层次人才”认定。获中国电子学会自然科学二等奖、福建省科技进步三等奖、
