--- a/sicongliu.html
+++ b/sicongliu.html
@@ -64,15 +64,15 @@
 -->
 <h3>个人简介 Biography</h3>
 	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位，导师宋健教授, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
-		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授、硕士生导师。厦门大学第八届教职工代表大会正式代表。</p>
+		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授、硕士生导师。</p>
 
 	<p>已发表60余篇期刊与会议学术论文，出版学术专著4部、专著章节1部，获得10项发明专利授权。
-		担任一项宽带通信国家标准起草人。获“福建省高层次人才”认定。获中国电子学会自然科学二等奖、福建省科技进步三等奖、
-		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”奖。获ACM UbiComp 2021 CPD优秀论文奖。主持国家自然科学基金、移动通信国家重点实验室开放课题、福建省自然科学基金、厦门市青年创新基金等科研项目。
-		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材。</p>
+		担任一项宽带通信国家标准起草人。福建省高层次人才、福建省引进高层次人才、厦门市高层次人才。获中国电子学会自然科学二等奖、福建省科技进步三等奖、
+		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”奖。获ACM UbiComp 2021 CPD优秀论文奖。主持多项国家自然科学基金、国家重点实验室开放课题、福建省自然科学基金、厦门市自然科学基金等科研项目。
+		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。获厦门大学高等教育教学成果奖一等奖。主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材。</p>
 
 	<p> IEEE高级会员、中国通信学会高级会员、中国电子学会会员、ACM会员。参与多个国际学术会议的组织工作，包括担任 IEEE SmartGridComm 2019 的 Publication Chair，IEEE ISPLC 2021 的 TPC Chair, ACM UbiComp CPD 2022 的 TPC Chair, IEEE ICCC 2021 的 Workshop Chair，IEEE ICCE 2019 的 Track Chair，
-		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Digital Signal Processing, Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编委或特邀编委。
+		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Digital Signal Processing, Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编委或特邀编委。厦门大学第八届教职工代表大会正式代表。
 		</p>
 
 	<p>目前的研究兴趣为通信感知一体化、可见光通信、压缩感知、基于人工智能的通信技术。<b>欢迎对科研和相关方向感兴趣的同学联系我</b>（电子邮件）</p>
@@ -89,7 +89,7 @@
 	the Outstanding Doctoral Dissertation Award of Tsinghua University, and the EE Outstanding Academic Youth Award of Tsinghua University.
 	He has won the Best Paper Award of ACM UbiComp 2021 CPD. He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China (NSFC), Open Research Fund of National Laboratory on Mobile Communications, Natural Science Foundation of Fujian,
 	and Youth Innovation Fund of Xiamen. He has participated in major projects including the State Key Research Project, the National Major Project of Science and Technology,
-	and the Major Project of Science and Technology of Fujian. He is the first editor of a major textbook, which is included in the Textbook Project of the Higher Education Electronic Information Teaching Steering Committee, Department of Education of China.
+	and the Major Project of Science and Technology of Fujian. He has won the First Prize of Higher Education and Teaching Award of Xiamen University. He is the first editor of a major textbook, which is included in the Textbook Project of the Higher Education Electronic Information Teaching Steering Committee, Department of Education of China.
    </p>
 
 <p>	He is a Senior Member of IEEE and China Institute of Communications (CIC), and a Member of ACM and China Institute of Electronics (CIE). He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, TPC Chair of ACM UbiComp CPD 2022, Track Chair of IEEE ICCE 2019,
@@ -116,6 +116,7 @@
 	<p>Aug. 2008-Jul. 2012 &nbsp; <b>Bachelor</b>, Department of Electronic Engineering, Tsinghua University</p>
 
 <h3>荣誉奖励 Honors and Awards</h3>
+	<p>&bull; 厦门大学高等教育教学成果奖一等奖，2023 </p>
 	<p>&bull; ACM UbiComp 2021 CPD 优秀论文奖，2021 </p>
 	<p>&bull; 福建省高层次人才，2021 </p>
 	<p>&bull; 中国电子学会自然科学二等奖，2019 </p>
@@ -130,6 +131,7 @@
 	<p>&bull; 清华大学优秀研究生支持计划暨唐立新奖学金, 2015</p>
 	<p>&bull; 硕士研究生国家奖学金, 2014</p>
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
+	<p>&bull; First Prize of Higher Education and Teaching Award of Xiamen University, 2023 </p>
 	<p>&bull; Best Paper Award of ACM UbiComp 2021 CPD, 2021 </p>
 	<p>&bull; High-Level Talents of Fujian Province, 2021 </p>
 	<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics, 2019 </p>
@@ -151,13 +153,13 @@
 	<!--<p>&bull; Tsinghua Second-Class Scholarship for Freshmen</p>-->
 
 <h3>科研项目 Research Grants</h3>
-	<p>&bull; 国家自然科学基金，面向高可靠车联网通信的稀疏干扰消除方法研究，2020年1月-2022年12月，主持</p>
+	<p>&bull; 国家自然科学基金青年基金，面向高可靠车联网通信的稀疏干扰消除方法研究，2020年1月-2022年12月，主持</p>
 	<p>&nbsp;&nbsp;National Natural Science Foundation of China, Research on sparse interference cancellation methods for ultra-reliable vehicular communications,  2020.01-2022.12 (PI). </p>
 	<p>&bull; 移动通信国家重点实验室开放课题项目，复杂非平稳水下无线光信道稀疏建模与智能估计技术研究，2023年1月-2024年12月，主持</p>
 	<p>&nbsp; Open Research Fund of National Laboratory of Mobile Communications, Research on complex channel sparse modelling and smart estimation for underwater wireless optical communications, 2023.01-2024.12 (PI). </p>
-	<p>&bull; 福建省自然科学基金，水下可见光通信的复杂信道稀疏表征和智能估计技术研究，2023年8月-2026年7月，主持</p>
+	<p>&bull; 福建省自然科学基金面上项目，水下可见光通信的复杂信道稀疏表征和智能估计技术研究，2023年8月-2026年7月，主持</p>
 	<p>&nbsp; Natural Science Foundation of Fujian Province of China, Study on sparse modelling and intelligent estimation of underwater VLC channels, 2023.08-2026.07 (PI). </p>
-	<p>&bull; 福建省自然科学基金，面向新一代无线通信的多重压缩感知与稀疏学习技术研究，2019年7月-2022年6月，主持</p>
+	<p>&bull; 福建省自然科学基金青年项目，面向新一代无线通信的多重压缩感知与稀疏学习技术研究，2019年7月-2022年6月，主持</p>
 	<p>&nbsp; Natural Science Foundation of Fujian Province of China, Study on compressed sensing and sparse learning technologies for next-generation wireless communications, 2019.07-2022.06 (PI). </p>
 	<p>&bull; 厦门市自然科学基金青年创新基金，复杂5G无线环境下的稀疏干扰智能消除方法，2020年7月-2023年6月，主持</p>
 	<p>&nbsp; Youth Innovation Fund of Natural Science Fund of Xiamen, Intelligent Methods of Sparse Interference Mitigation for Complex 5G Wireless Environments, 2020.07-2023.06 (PI)</p>
@@ -184,11 +186,13 @@
 <h3>教学工作 Teaching</h3>
 	<p>&bull; CST304: Digital Signal Processing, Undergraduates, Fall 2018/2019, Xiamen University Malaysia (English)</p>
 	<p>&bull; CST103: Programming Language (C), Undergraduates, Fall 2018/2019, Xiamen University Malaysia (English)</p>
-	<p>&bull; 通信电路原理, 本科生, 2018/2019、2019/2020、2020/2021、2021/2022学年，厦门大学</p>
+	<p>&bull; 通信电路原理, 本科生, 2018/2019、2019/2020、2020/2021、2021/2022、2023/2024学年，厦门大学</p>
+	<p>&bull; 数字通信, 研究生, 2022/2023、2023/2024学年，厦门大学</p>
 	<p>&bull; 无线通信原理, 本科生, 2019/2020、2020/2021、2021/2022学年, 厦门大学</p>
-	<p>&bull; 数字电视技术, 本科生, 2022/2023学年，厦门大学</p>
 	<p>&bull; 数字信号处理实验, 本科生, 2019/2020、2020/2021学年，厦门大学</p>
-	<p>&bull; 数字通信, 研究生, 2022/2023学年，厦门大学</p>
+	<p>&bull; 数字电视技术, 本科生, 2022/2023学年，厦门大学</p>
+
+
 
 <h3>发表论著 Selected Publications</h3>
 
@@ -331,6 +335,12 @@
 <br>
 <p><strong>会议论文 Conferences</strong></p>
 
+	<p>&bull; <b>S. Liu</b>*, Y. Mou, H. Zhang, "Block-Sparse Learning Enabled Approach Towards Efficient Channel Estimation for Underwater Visible Light Communications,” <i>2024 International Wireless Communications and Mobile Computing (IWCMC)</i>, Ayia Napa, Cyprus, pp. 1166-1170, June 2024.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10592451">Abstract</a>]</p>
+
+	<p>&bull; <b>S. Liu</b>*, Y. Mou, H. Zhang, "Sparsity-Aware Channel Estimation for Underwater Acoustic Wireless Networks: A Generative Adversarial Network Enabled Approach,” <i>2024 International Wireless Communications and Mobile Computing (IWCMC)</i>, Ayia Napa, Cyprus, pp. 1171-1176, June 2024.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10592317">Abstract</a>]</p>
+
 	<p>&bull; X. Wang, <b>S. Liu</b>*, "Multi-Target Cooperative Visible Light Positioning: A Compressed Sensing Based Framework,” <i>2023 IEEE International Conference on Communications (ICC)</i>, Rome, Italy, pp. 3290-3295, May 2023.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10278778">Abstract</a>]</p>
 
@@ -406,6 +416,8 @@
 
 <br>
 <p><strong>学术报告 Invited Speeches and Talks</strong></p>
+<p>&bull; 在 2024 12th International Conference on Intelligent Computing and Wireless Optical Communications (ICWOC) 会议做邀请学术报告</p>
+	<p> &nbsp; Invited speech, 2024 12th International Conference on Intelligent Computing and Wireless Optical Communications (ICWOC)</p>
 <p>&bull; 在 2023 11th International Conference on Intelligent Computing and Wireless Optical Communications (ICWOC) 会议做邀请学术报告</p>
 	<p> &nbsp; Invited speech, 2023 11th International Conference on Intelligent Computing and Wireless Optical Communications (ICWOC)</p>
 <p>&bull; 在 2023 Visible Light Communications and Optical Computing (VLCOC)会议做邀请学术报告</p>
@@ -421,7 +433,7 @@
 <h3>发明专利 Innovation Patents</h3>
 <p>&bull; <b>刘思聪</b>，唐潇；一种基于深度强化学习的稀疏感知大规模随机接入方法；中国发明专利，202310902345.5；已公开。</p>
 
-<p>&bull; <b>刘思聪</b>，苏丹萍；一种基于机器学习方式的室内可见光定位方法；中国发明专利，202210866116.8；已公开。</p>
+<p>&bull; <b>刘思聪</b>，苏丹萍；一种基于机器学习方式的室内可见光定位方法；中国发明专利，202210866116.8；已授权。</p>
 
 <p>&bull; <b>刘思聪</b>，高龙杰；一种基于深度学习的稀疏水声信道估计方法；中国发明专利，202011361757.5；已授权。</p>
 
@@ -456,7 +468,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd Oct. 2023 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Jul. 2024 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
