--- a/sicongliu.html
+++ b/sicongliu.html
@@ -117,6 +117,7 @@
 
 <h3>荣誉奖励 Honors and Awards</h3>
 	<p>&bull; 厦门大学高等教育教学成果奖一等奖，2023 </p>
+	<p>&bull; 厦门市高层次人才，2023 </p>
 	<p>&bull; ACM UbiComp 2021 CPD 优秀论文奖，2021 </p>
 	<p>&bull; 福建省高层次人才，2021 </p>
 	<p>&bull; 中国电子学会自然科学二等奖，2019 </p>
@@ -132,6 +133,7 @@
 	<p>&bull; 硕士研究生国家奖学金, 2014</p>
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
 	<p>&bull; First Prize of Higher Education and Teaching Award of Xiamen University, 2023 </p>
+	<p>&bull; High-Level Talents of Xiamen, 2023 </p>
 	<p>&bull; Best Paper Award of ACM UbiComp 2021 CPD, 2021 </p>
 	<p>&bull; High-Level Talents of Fujian Province, 2021 </p>
 	<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics, 2019 </p>
