--- a/sicongliu.html
+++ b/sicongliu.html
@@ -229,6 +229,18 @@
 	<p>&bull; <b>S. Liu*</b>, X. Wang, J. Song and Z. Han, "Cooperative Robotics Visible Light Positioning: An Intelligent Compressed Sensing and GAN-Enabled Framework," <i>IEEE Journal of Selected Topics in Signal Processing</i>, doi: 10.1109/JSTSP.2024.3368661, Feb. 2024.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10443444">Abstract</a>][<a target="blank"  href="papers/JSTSP24wang.pdf">PDF</a>][<a target="blank"  href="papers/JSTSP24wang.txt">bibtex</a>]</p>
 
+	<p>&bull;Y. Su, Y. Lin, <b>S. Liu</b>, et al, "Coexistence of Hybrid VLC-RF and Wi-Fi for Indoor Wireless Communication Systems: An Intelligent Approach," <i>IEEE Transactions on Network and Service Management</i>, doi: 10.1109/TNSM.2024.3436887, Aug. 2024.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10620216">Abstract</a>]</p>
+
+	<p>&bull; W. Hua, L. Xiong, <b>S. Liu</b>, L. Chen, X. Hong, J. F. C. Mota, and X. Cheng, "Classification-Driven Discrete Neural Representation Learning for Semantic Communications," <i>IEEE Internet of Things Journal</i>, vol. 11, no. 9, pp. 16061-16073, May, 2024.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10411860">Abstract</a>]</p>
+
+	<p>&bull;Y. Su, et al, "Efficient User-Centric AP Clustering Through Stable UE-AP Matching for Indoor VLC Systems," <i>IEEE Wireless Communications Letters</i>, vol. 13, no. 7, pp. 1903-1907, Apr. 2024.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10511287">Abstract</a>]</p>
+
+	<p>&bull; C. Liang, J. Li, <b>S. Liu</b> , F. Yang, Y. Dong, J. Song, X.-P. Zhang, W. Ding, "Integrated sensing, lighting and communication based on visible light communication: A review," <i>Digital Signal Processing</i>, vol. 145, Fec. 2024.
+		[<a target="blank" href="https://www.sciencedirect.com/science/article/pii/S1051200423004359">Abstract</a>][<a target="blank"  href="papers/DSP24dwb.pdf">PDF</a>][<a target="blank"  href="papers/DSP24dwb.bib">bibtex</a>]</p>
+
 	<p>&bull; Y. Liao, <b>S. Liu*</b>, X. Hong, J. Shi and L. Cheng, "Integration of Communication and Navigation Technologies Towards LEO-Enabled 6G Networks: A Survey," <i>Space: Science & Technology (Science Partner Journals)</i>, vol. 3, no. 92, pp. 1-31, Oct. 2023.
 	[<a target="blank" href="https://spj.science.org/doi/10.34133/space.0092">DOI: 10.34133/space.0092</a>]</p>
 
